added more boilerplate and todos

--- a/mainApp/index.html
+++ b/mainApp/index.html
@@ -16,6 +16,7 @@
 
         <script src="mainController.js"></script>
         <link rel="stylesheet" type="text/css" href="main.css" />
+        <script src="components/dataView/DataViewController.js"></script>
 
     </head>
 
